# MaxOS

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  Notes.md  README.md  boot.s  driver.cpp  driver.h  gdt.cpp  gdt.h  header.html  interrupts.cpp  interrupts.h  interruptstubs.s  kernel.c  kernel.cpp  keyboard.cpp  keyboard.h  linker.ld  loader.s  mouse.cpp  mouse.h  os.iso  port.cpp  port.h  stage2_eltorito  types.h
kernel/: CMakeLists.txt  kern.txt
kernel/include/: memorymanagement.h  multitasking.h  multithreading.h  syscalls.h
kernel/include/common/: buffer.h  colour.h  constants.h  coordinates.h  eventHandler.h  graphicsContext.h  inputStream.h  kprint.h  logger.h  logo.h  logo_kp.h  macros.h  map.h  math.h  outputStream.h  pair.h  printf.h  rectangle.h  spinlock.h  string.h  time.h  timer.h  types.h  vector.h
kernel/include/drivers/: amd_am79c973.h  ata.h  driver.h  intel_i217.h  keyboard.h  mouse.h  vga.h
kernel/include/drivers/clock/: clock.h
kernel/include/drivers/console/: console.h  serial.h  textmode.h  textmodeconsole.h  vesaboot.h
kernel/include/drivers/disk/: ata.h  disk.h  ide.h
kernel/include/drivers/ethernet/: amd_am79c973.h  ethernet.h  intel_i217.h  rawdatahandler.h
kernel/include/drivers/peripherals/: keyboard.h  mouse.h
kernel/include/drivers/video/: vesa.h  vga.h  video.h
kernel/include/filesystem/: ext2.h  fat32.h  filesystem.h  msdospart.h  path.h  vfs.h  vfsresource.h
kernel/include/filesystem/format/: ext2.h  fat32.h
kernel/include/filesystem/partition/: msdos.h
kernel/include/gui/: desktop.h  font.h  render.h  widget.h  window.h
kernel/include/gui/font/: amiga_font.h
kernel/include/gui/widgets/: button.h  inputbox.h  text.h
kernel/include/hardwarecommunication/: acpi.h  apic.h  interrupts.h  pci.h  port.h  serial.h
kernel/include/memory/: memoryIO.h  memorymanagement.h  physical.h  pmm.h  virtual.h
kernel/include/net/: arp.h  etherframe.h  ethernetframe.h  icmp.h  ipv4.h  tcp.h  udp.h
kernel/include/processes/: elf.h  ipc.h  process.h  resource.h  scheduler.h  scheduler_resources.h
kernel/include/runtime/: cplusplus.h  kasan.h  ubsan.h
kernel/include/system/: cpu.h  gdt.h  memorymanagement.h  multiboot.h  multitasking.h  multithreading.h  process.h  syscalls.h  ubsan.h
kernel/include/tests/: common.h  test.h
kernel/src/: gdt.cpp  kernel.cpp  linker.ld  loader.s  memorymanagement.cpp  multiboot_header.s  multitasking.cpp  multithreading.cpp  syscalls.cpp
kernel/src/asm/: core_loader.s  interrupts.s  interruptstubs.s  loader.s  multiboot_header.s
kernel/src/common/: buffer.cpp  colour.cpp  graphicsContext.cpp  inputStream.cpp  kprint.cpp  logger.cpp  outputStream.cpp  printf.cpp  rectangle_templates.cpp  spinlock.cpp  string.cpp  symbols.cpp  timer.cpp  vector.cpp  vector_templates.cpp
kernel/src/drivers/: amd_am79c973.cpp  ata.cpp  driver.cpp  intel_i217.cpp  keyboard.cpp  mouse.cpp  vga.cpp
kernel/src/drivers/clock/: clock.cpp
kernel/src/drivers/console/: console.cpp  serial.cpp  textmode.cpp  textmodeconsole.cpp  vesaboot.cpp
kernel/src/drivers/disk/: ata.cpp  disk.cpp  ide.cpp
kernel/src/drivers/ethernet/: amd_am79c973.cpp  ethernet.cpp  intel_i217.cpp  rawdatahandler.cpp
kernel/src/drivers/peripherals/: keyboard.cpp  mouse.cpp
kernel/src/drivers/video/: vesa.cpp  vga.cpp  video.cpp
kernel/src/filesystem/: ext2.cpp  fat32.cpp  filesystem.cpp  msdospart.cpp  path.cpp  vfs.cpp  vfsresource.cpp
kernel/src/filesystem/format/: ext2.cpp  fat32.cpp
kernel/src/filesystem/partition/: msdos.cpp
kernel/src/gui/: desktop.cpp  font.cpp  render.cpp  widget.cpp  window.cpp
kernel/src/gui/widgets/: button.cpp  inputbox.cpp  templates.cpp  text.cpp
kernel/src/hardwarecommunication/: acpi.cpp  apic.cpp  interrupts.cpp  interruptstubs.s  pci.cpp  port.cpp  serial.cpp
kernel/src/memory/: memoryIO.cpp  memoryinputoutput.cpp  memorymanagement.cpp  physical.cpp  pmm.cpp  virtual.cpp
kernel/src/net/: arp.cpp  etherframe.cpp  ethernetframe.cpp  icmp.cpp  ipv4.cpp  tcp.cpp  udp.cpp
kernel/src/processes/: elf.cpp  ipc.cpp  process.cpp  resource.cpp  scheduler.cpp  scheduler_resources.cpp
kernel/src/runtime/: cplusplus.cpp  kasan.cpp  ubsan.cpp
kernel/src/system/: cpu.cpp  gdt.cpp  memorymanagement.cpp  multiboot.cpp  multitasking.cpp  multithreading.cpp  process.cpp  syscalls.cpp  ubsan.cpp
kernel/src/tests/: common.cpp  test.cpp
libraries/ipc/: CMakeLists.txt
libraries/ipc/include/ipc/: messages.h  sharedmemory.h
libraries/ipc/src/: messages.cpp  sharedmemory.cpp
libraries/libcommon/: CMakeLists.txt
libraries/libcommon/include/: assert.h  buffer.h  colour.h  constants.h  coordinates.h  eventHandler.h  inputStream.h  macros.h  map.h  math.h  mem.h  outputStream.h  rectangle.h  spinlock.h  string.h
libraries/libcommon/src/: buffer.cpp  colour.cpp  inputStream.cpp  mem.cpp  outputStream.cpp  spinlock.cpp  string.cpp
libraries/libkpi/: CMakeLists.txt
libraries/libkpi/include/: common.h  syscalls.h
libraries/libkpi/include/filesystem/: directory.h  file.h
libraries/libkpi/include/ipc/: messages.h  rpc.h  sharedmemory.h
libraries/libkpi/include/processes/: process.h  thread.h
libraries/libkpi/src/: syscalls.cpp
libraries/libkpi/src/filesystem/: directory.cpp  file.cpp
libraries/libkpi/src/ipc/: messages.cpp  rpc.cpp  sharedmemory.cpp
libraries/libkpi/src/processes/: process.cpp  thread.cpp
libraries/syscore/: CMakeLists.txt  greeting.rpc
libraries/syscore/include/: common.h  syscalls.h
libraries/syscore/include/filesystem/: directory.h  file.h
libraries/syscore/include/ipc/: messages.h  rpc.h  sharedmemory.h
libraries/syscore/include/processes/: process.h  thread.h
libraries/syscore/src/: syscalls.cpp
libraries/syscore/src/filesystem/: directory.cpp  file.cpp
libraries/syscore/src/ipc/: messages.cpp  rpc.cpp  (+1 more)
libraries/system/: CMakeLists.txt
libraries/system/include/: syscalls.h
libraries/system/src/: syscalls.cpp
programs/Example2/: CMakeLists.txt
programs/Example2/src/: linker.ld  main.cpp
(+4329 files in other folders)
